<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>all_launch</name>
  <version>1.0.0</version>
  <description>Launcher for swarm robots controlling</description>
  <maintainer email="alexmazurin0105@gmail.com">almaz</maintainer>
  <license>MIT</license>

  <buildtool_depend>colcon</buildtool_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
